# NovelCharacterAI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
scripts/: create_character_sample_utterance.py  create_train_dataset.py  create_venv.sh  generate.py  train.py
src/characterai/: prompt.py  tone_embedding.py
