[project]
name = "characterai"
version = "1.0.1"
description = "Python Virtual Environment for Japanese Novel Dialogue Corpus"
authors = [{ name = "Kazuma Iwamoto", email = "" }]
requires-python = "~=3.11.0"
readme = "README.md"

[tool.hatch.build.targets.sdist]
include = ["src/characterai"]

[tool.hatch.build.targets.wheel]
include = ["src/characterai"]

[tool.hatch.build.targets.wheel.sources]
"src/characterai" = "characterai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
]
ignore = [
    "E203",  # whitespace before ":"
    "E501",  # line-too-long
    # Ruff doesn't enable pycodestyle warnings (W)
    # "W503",  # line break occurred before a binary operator
]

[tool.ruff.lint.isort]
known-first-party = ["characterai"]